--- a/uwsgi.conf
+++ b/uwsgi.conf
@@ -5,4 +5,4 @@ start on runlevel [2345]
 stop on runlevel [!2345]
 
 respawn
-exec /usr/bin/uwsgi --ini /AWS/app.ini
+exec /usr/local/bin/uwsgi --ini /AWS/app.ini
