--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 #   * Official English Documentation: http://nginx.org/en/docs/
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
-user nginx;
+user ec2-user;
 worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /var/run/nginx.pid;
@@ -43,7 +43,7 @@ http {
 
     location / {
         include uwsgi_params;
-        uwsgi_pass unix:/tmp/myproject.sock;
+        uwsgi_pass unix:/home/ec2-user/aws/mywebflask.sock;
     }
 }
 
